[package]
name = "deno_runtime_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = "0.153.0"
tokio = { version = "1.21.1", features = ["full"] }
futures = "0.3.21"
deno_fetch = "0.94.0"
deno_runtime = "0.79.0"
deno_ast = {version = "0.19.0", features = ["transpiling"] }
