[package]
name = "deno_runtime_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = "0.170.0"
futures = "0.3.26"
deno_fetch = "0.112.0"
deno_runtime = "0.96.0"
deno_ast = {version = "0.23.2", features = ["transpiling"] }
serde_v8 = "0.81.0"
serde = "1.0.152"
